// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryModal should render empty state 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw fWjEmW absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxirZ cNGyFL w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          History
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col mt-5"
          >
            <div
              class="sc-Axmtr jxiffJ -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                    role="row"
                  >
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Type
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Date
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Transaction
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                />
              </table>
            </div>
            <div
              class="self-center mt-2"
            >
              <div
                class="sc-AxhCb etDdhz"
                data-testid="Pagination"
              >
                <div
                  class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
                >
                  Page 1 of 3
                </div>
                <button
                  class="sc-AxirZ cwVJdM w-8"
                  data-testid="CompactPagination__next"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      forward.svg
                    </svg>
                  </div>
                </button>
                <button
                  class="sc-AxirZ cwVJdM w-8"
                  data-testid="CompactPagination__last"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      pagination-last.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HistoryModal should render properly 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw fWjEmW absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxirZ cNGyFL w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          History
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col mt-5"
          >
            <div
              class="sc-Axmtr jxiffJ -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                    role="row"
                  >
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Type
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Date
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-end"
                      >
                        <div>
                          Transaction
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Registration
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        27 May 2020
                      </span>
                    </td>
                    <td
                      class="flex justify-end items-center py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Update
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        18 May 2020
                      </span>
                    </td>
                    <td
                      class="flex justify-end items-center py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Update
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        3 May 2020
                      </span>
                    </td>
                    <td
                      class="flex justify-end items-center py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                    data-testid="blockchain-table__row"
                  >
                    <td
                      class="py-6 font-semibold text-left"
                    >
                      <span>
                        Resign
                      </span>
                    </td>
                    <td
                      class="py-6 font-semibold text-center"
                    >
                      <span>
                        15 Jun 2020
                      </span>
                    </td>
                    <td
                      class="flex justify-end items-center py-6 font-semibold text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm pXfjM"
                        height="15"
                        width="15"
                      >
                        <svg>
                          redirect.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        View
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="self-center mt-2"
            >
              <div
                class="sc-AxhCb etDdhz"
                data-testid="Pagination"
              >
                <div
                  class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
                >
                  Page 1 of 3
                </div>
                <button
                  class="sc-AxirZ cwVJdM w-8"
                  data-testid="CompactPagination__next"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      forward.svg
                    </svg>
                  </div>
                </button>
                <button
                  class="sc-AxirZ cwVJdM w-8"
                  data-testid="CompactPagination__last"
                  type="button"
                >
                  <div
                    class="sc-AxjAm HWmvM"
                    height="12"
                    width="12"
                  >
                    <svg>
                      pagination-last.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
